--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="js/coin-slider.min.js"></script>
 </head>
 <body>
+  <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',3749933,document.body||document.documentElement)</script>
 <div class="main">
   <div class="header">
     <div class="header_resize">
