--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <li class="active"><a href="index.html"><span>Home Page</span></a></li>
           <li><a href="support.html"><span>Support</span></a></li>
           <li><a href="about.html"><span>Apply For Loan</span></a></li>
-          <li><a href="contact.html"><span>Covid-19 Loan</span></a></li>
+          <li><a href="blog.html"><span>Covid-19 Loan</span></a></li>
         </ul>
       </div>
       <div class="clr"></div>
