--- a/blog.html
+++ b/blog.html
@@ -51,11 +51,13 @@
     <div class="content_resize">
       <div class="mainbar">
         <div class="article">
-          <h2><span>A Blog</span> Entry</h2>
+          <h2><span>Messi</span> Ronaldo</h2>
           <div class="clr"></div>
-          <p>Posted by <a href="#">Admin</a> <span>&nbsp;&bull;&nbsp;</span> Filed under <a href="#">templates</a>, <a href="#">internet</a></p>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. Donec mattis, purus nec placerat bibendum, dui pede condimentum odio, ac blandit ante orci ut diam. Cras fringilla magna. Phasellus suscipit, leo a pharetra condimentum, lorem tellus eleifend magna, eget fringilla velit magna id neque. Curabitur vel urna. In tristique orci porttitor ipsum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec libero. Suspendisse bibendum. Cras id urna. Morbi tincidunt, orci ac convallis aliquam, lectus turpis varius lorem, eu posuere nunc justo tempus leo. </p>
-          <p>Tagged: <a href="#">orci</a>, <a href="#">lectus</a>, <a href="#">varius</a>, <a href="#">turpis</a></p>
+          <p>Posted by <a href="#">Admin</a> <span>&nbsp;&bull;&nbsp;</span> Filed under <a href="#">Admin</a>, <a href="#">Admin</a></p>
+          <p>Cristiano Ronaldo and Lionel Messi could meet again in the UEFA Champions League as Barcelona host Juventus in their final UEFA Champions League Group G game; UEFA.com tracks their past encounters.
+
+            The two most celebrated forwards of their age, Messi and Ronaldo have met 35 times in total with their clubs and national teams over the years, with the Argentinian having slightly the better of their encounters in terms of wins (16 to Ronaldo's ten) and goals (22 to Ronaldo's 19). However, they have not met in European competition since Barcelona beat Real Madrid in the 2010/11 UEFA Champions League semi-finals. They would have faced off on Matchday 2 this season, but Ronaldo was absent through illness; in the event, Messi scored a late penalty in Barcelona's 2-0 victory in Turin. </p>
+          <p>Admin: <a href="#">More</a>, <a href="#">Like</a>, <a href="#">View</a>, <a href="#">Comment</a></p>
           <p><a href="#"><strong>Comments (3)</strong></a> <span>&nbsp;&bull;&nbsp;</span> May 27, 2010 <span>&nbsp;&bull;&nbsp;</span> <a href="#"><strong>Edit</strong></a></p>
         </div>
         <div class="article">
@@ -63,7 +65,7 @@
           <div class="clr"></div>
           <div class="comment"> <a href="#"><img src="images/userpic.gif" width="40" height="40" alt="" class="userpic" /></a>
             <p><a href="#">admin</a> Says:<br />
-              April 20th, 2009 at 2:17 pm</p>
+              December 8th, 2020 at 2:17 pm</p>
               Cristiano Ronaldo and Lionel Messi could meet again in the UEFA Champions League as Barcelona host Juventus in their final UEFA Champions League Group G game; UEFA.com tracks their past encounters.
 
 The two most celebrated forwards of their age, Messi and Ronaldo have met 35 times in total with their clubs and national teams over the years, with the Argentinian having slightly the better of their encounters in terms of wins (16 to Ronaldo's ten) and goals (22 to Ronaldo's 19). However, they have not met in European competition since Barcelona beat Real Madrid in the 2010/11 UEFA Champions League semi-finals. They would have faced off on Matchday 2 this season, but Ronaldo was absent through illness; in the event, Messi scored a late penalty in Barcelona's 2-0 victory in Turin.
